LU-5352 dt: correct if condition in dt_index_read()

In dt_index_read() return -EPROTO if rdpg->rp_count is zero or is not
divisible by LU_PAGE_SIZE.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Ib4f884bf0759b81978336d68fea45cf7a5d8a70f
Reviewed-on: http://review.whamcloud.com/11121
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>